SW-3084 Move laserhead minimum speed into the laserhead profiles

--- a/octoprint_mrbeam/templates/mrbeam_initscript.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_initscript.jinja2
@@ -15,6 +15,7 @@
     var MRBEAM_WIZARD_TO_SHOW = "{{ wizard_to_show }}";
     var MRBEAM_LASER_HEAD_SERIAL = "{{ laserhead_serial }}";
     var MRBEAM_LASER_HEAD_MODEL = "{{ laserhead_model }}";
+    var MRBEAM_LASER_HEAD_MIN_SPEED = "{{ laserhead_min_speed }}";
     var MRBEAM_GRBL_VERSION = "{{ grbl_version }}";
     var INIT_TS_MS = "{{ init_ts_ms }}";
     var INITIAL_CALIBRATION = false;
