SW-3084 Replace min speed value string with variable and fix translation

--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -295,7 +295,7 @@
 
 
                                 <div class="range-control-and-label" data-toggle="tooltip" data-placement="right"
-                                     title="<b>{{ _('The movement velocity range used for engraving pixel graphics (50-3000 mm/min).') }}</b>
+                                     title="<b>{{ _('The movement velocity range used for engraving pixel graphics') }} ({{ laserhead_min_speed }}-3000 mm/min).</b>
                                      <ul><li>{{ _('Bright/white pixels use the left (higher) value') }}</li>
                                      <li>{{ _('Dark/black pixels use the right (lower) value.') }}</li></ul>
                                      {{ _('Equal values do not vary the laser velocity related to the pixel brightness.') }}">
