SW-3084 Change warning for to low speeds in material settings (#1737)
* SW-3084 Remove mentions of specific speed values

This is removed because it varies based on the laserhead model being used.

* SW-3084 Add safety note for Finn Cardboard

* SW-3084 Fix typo

* SW-3084 Make safety note more prominent

* SW-3084 Add speed warning upon  lowering feedrate

* SW-3084 Limit minimum speed based on laserhead model

* SW-3084 Translate added and modified strings

* SW-3084 Refactor minimum speed

* SW-3084 Move laserhead minimum speed into the laserhead profiles

* Update octoprint_mrbeam/static/js/app/view-models/convert.js

Co-authored-by: Josef-MrBeam <81746291+Josef-MrBeam@users.noreply.github.com>

* SW-3084 Replace min speed value string with variable and fix translation

* run prettier

---------

Co-authored-by: Josef-MrBeam <81746291+Josef-MrBeam@users.noreply.github.com>
Co-authored-by: Josef-MrBeam <josef@mr-beam.org>

--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -194,8 +194,8 @@
                 </div>
 
                 <div id="material_info">
-                    <p>
-                        <i class="icon-warning-sign" style="color:red;"
+                    <p class="safety-note-outer">
+                        <i class="icon-warning-sign"
                            data-bind="visible: material_safety_notes()"></i>
                         <span id="safety_notes" class="" data-bind="text: material_safety_notes, css:{ incompatible_safety_warning: !$root.selected_material_compatibility() }"></span>
                     </p>
@@ -295,7 +295,7 @@
 
 
                                 <div class="range-control-and-label" data-toggle="tooltip" data-placement="right"
-                                     title="<b>{{ _('The movement velocity range used for engraving pixel graphics (50-3000 mm/min).') }}</b>
+                                     title="<b>{{ _('The movement velocity range used for engraving pixel graphics') }} ({{ laserhead_min_speed }}-3000 mm/min).</b>
                                      <ul><li>{{ _('Bright/white pixels use the left (higher) value') }}</li>
                                      <li>{{ _('Dark/black pixels use the right (lower) value.') }}</li></ul>
                                      {{ _('Equal values do not vary the laser velocity related to the pixel brightness.') }}">
@@ -316,6 +316,10 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <span id="settings__span--speed-warning" class="hidden">
+                            {{ _('Please remember, lowering the cutting speed can produce more heat and thus, among other risk factors, can ignite certain easily-flammable materials.') }}
+                            </span>
 
                             <div class="control-group">
                                 <div class="line-control-and-label" data-bind="visible: show_line_color_mappings"
