--- a/octoprint_mrbeam/static/css/svgtogcode.css
+++ b/octoprint_mrbeam/static/css/svgtogcode.css
@@ -636,6 +636,17 @@ li.material_entry.custom.incompatible_material::after {
   margin: 0;
 }
 
+#material_info > p {
+  color: #e25303;
+}
+
+#settings__span--speed-warning {
+  width: 600px;
+  border: 1px solid #e25303;
+  color: #e25303;
+  padding: 6px;
+}
+
 #material_type,
 #material_color,
 #material_thickness,
