improve existing errors

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -1763,7 +1763,7 @@ ul.dropdown-menu li a {
 
 .ui-pnotify .alert-error a,
 .ui-pnotify .alert-danger a {
-  color: #b94a48;
+  color: #e25303;
 }
 
 .ui-pnotify .alert-success a {
