--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -3782,6 +3782,11 @@ div.hopscotch-bubble .hopscotch-bubble-number {
   font-family: "FontAwesome", serif;
 }
 /* Font Awesome v4 backward compatibility for version v6 */
+/* Font Awesome v5 backward compatibility for version v6 */
+.fas {
+  font-family: "Font Awesome 5 Free", serif;
+}
+/* Font Awesome v5 backward compatibility for version v6 */
 
 /* Laser safety conditions - start */
 #laser-safety-conditions ul li:first-child {
