--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -2759,6 +2759,29 @@ hides the force update buttons
   margin-left: 30px;
 }
 
+.prefilter-clickable {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.prefilter-clickable:hover {
+  background-color: #eee;
+}
+
+.prefilter-clickable:not(:first-child) {
+  border-top: 1px solid #ddd;
+}
+
+.prefilter-clickable .span1 {
+  text-align: center;
+}
+
+#settings_maintenance .tooltip {
+  opacity: 1;
+}
+
 /*
 * === LASER JOB DONE #madewithmrbeam ===
 */
