--- a/octoprint_mrbeam/templates/settings/maintenance_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/maintenance_settings.jinja2
@@ -18,8 +18,8 @@
                             <div class="span1">
                                 <input type="radio" name="heavyDutyPrefilter" data-bind="checked: heavyDutyPrefilterValue" value="false" data-test="maintenance-heavy-duty-prefilter-disable-checkbox">
                             </div>
-                            <div class="span11">
-                                <h4 class="prefilter_title" data-tooltip-image="/plugin/mrbeam/static/img/prefilter_mat.png">{{ _('Pre-filter mat (pink)') }}</h4>
+                            <div class="span11" data-tooltip-image="/plugin/mrbeam/static/img/prefilter_mat.png">
+                                <h4 class="prefilter_title" >{{ _('Pre-filter mat (pink)') }}</h4>
                                 <small class="maintenance-description">
                                     {{ _('The pink pre-filter mat is suitable for all those who use materials that cause little material abrasion (acrylic felt, slate, concrete, foam rubber, acrylic, etc.).') }}
                                 </small>
@@ -37,8 +37,8 @@
                             <div class="span1">
                                 <input type="radio" name="heavyDutyPrefilter" data-bind="checked: heavyDutyPrefilterValue" value="true" data-test="maintenance-heavy-duty-prefilter-enable-checkbox">
                             </div>
-                            <div class="span11">
-                                <h4 class="prefilter_title" data-tooltip-image="/plugin/mrbeam/static/img/prefilter_cartridge.png">{{ _('Pre-filter (cartridge)') }}</h4>
+                            <div class="span11" data-tooltip-image="/plugin/mrbeam/static/img/prefilter_cartridge.png">
+                                <h4 class="prefilter_title" >{{ _('Pre-filter (cartridge)') }}</h4>
                                 <small class="maintenance-description">
                                     {{ _('The pre-filter cartridge is best suited for power users who process a lot of wood, cardboard, Kraftplex or also stamp rubber.') }}
                                 </small>
