--- a/octoprint_mrbeam/templates/tab_workingarea.jinja2
+++ b/octoprint_mrbeam/templates/tab_workingarea.jinja2
@@ -150,7 +150,7 @@
                                             <div class="accordion-body collapse in" id="wa_pane_object_height_body">
                                                 <div class="accordion-inner">
                                                     <div>
-														<span class="muted">{{ _('Set the height at which you want to laser so that the camera preview is accurate (including cutting aids or the Mr Beam Height Extension). For more information on the working-height, see ') }}<a
+														<span class="muted">{{ _('Set the height at which you want to laser so that the camera preview is accurate (including the cutting aids or after the deduction of the Mr Beam Height Extension). For more information on the working-height, see ') }}<a
                                                                 target="_blank"
                                                                 href="{{ _("https://support.mr-beam.org/en") }}/support/solutions/articles/43000708214-how-to-adjusting-the-working-height-correctly?utm_source=beamos&utm_medium=software">
                                                                 {{ _("this Knowledge Base article") }}</a>.</span>
