--- a/octoprint_mrbeam/templates/tab_workingarea.jinja2
+++ b/octoprint_mrbeam/templates/tab_workingarea.jinja2
@@ -136,7 +136,7 @@
 
 
                                         <div id="mrb_working_height" class="accordion-inner">
-                                            <div class="accordion-heading ">
+                                            <div class="accordion-heading mrb-tooltip working-height-tooltip">
                                                 <a id="wa_pane_object_height_toggle" href="#wa_pane_object_height_body"
                                                    class="dropdown" data-toggle="collapse" aria-expanded="false">
                                                     <svg class="mrb_icon" viewBox="0 0 20 20">
@@ -145,6 +145,7 @@
                                                     {{ _('Working Height') }}:
                                                 </a>
                                                 <span class="caret" style="vertical-align: middle"></span>
+                                                <div class="mrb-tooltip-details"><img src="/plugin/mrbeam/static/img/working-height-diagram.png" alt=""></div>
                                             </div>
 
                                             <div class="accordion-body collapse in" id="wa_pane_object_height_body">
